--- a/App/Podfile
+++ b/App/Podfile
@@ -9,6 +9,7 @@ target 'Bazaar' do
         pod 'Firebase/Analytics'
         pod 'Firebase/Auth'
         pod 'Firebase/Firestore'
+        pod 'Firebase/Storage'
         pod 'Firebase/Database'
         pod 'FirebaseUI'
 
