--- a/android/qrCode/app/build.gradle
+++ b/android/qrCode/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.qrcode"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -32,7 +32,9 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
